unpackaged/main/default/objects/pse__Team__c/fields/pse__All_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>pse__All_Team_Members__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, the schedule is sent to all team members when you click the Send Schedule button.</description>
    <inlineHelpText>When true, the schedule is sent to all team members when you click the Send Schedule button.</inlineHelpText>
    <label>All Team Members</label>
    <type>Checkbox</type>
</CustomField>