unpackaged/main/default/objects/pse__Team__c/fields/pse__Anyone_With_Edit_Access__c.field-meta.xml
<CustomField>
    <fullName>pse__Anyone_With_Edit_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, a notification is sent to all team members with edit access when a team schedule is swapped.</description>
    <inlineHelpText>When true, a notification is sent to all team members with edit access when a team schedule is swapped.</inlineHelpText>
    <label>Anyone with Edit Access</label>
    <type>Checkbox</type>
</CustomField>