unpackaged/main/default/objects/pse__Team__c/fields/pse__Description__c.field-meta.xml
<CustomField>
    <fullName>pse__Description__c</fullName>
    <description>The description for the team.</description>
    <inlineHelpText>The description for the team.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>