unpackaged/main/default/objects/pse__Team__c/fields/pse__Now_Assigned__c.field-meta.xml
<CustomField>
    <fullName>pse__Now_Assigned__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, a notification is sent to the newly-assigned team member when a team schedule is swapped.</description>
    <inlineHelpText>When true, a notification is sent to the newly-assigned team member when a team schedule is swapped.</inlineHelpText>
    <label>Currently Assigned Team Member</label>
    <type>Checkbox</type>
</CustomField>