unpackaged/main/default/objects/pse__Team__c/fields/pse__Previously_Assigned__c.field-meta.xml
<CustomField>
    <fullName>pse__Previously_Assigned__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, a notification is sent to the previously-assigned team member when a team schedule is swapped.</description>
    <inlineHelpText>When true, a notification is sent to the previously-assigned team member when a team schedule is swapped.</inlineHelpText>
    <label>Previously Assigned Team Member</label>
    <type>Checkbox</type>
</CustomField>