unpackaged/main/default/objects/pse__Team__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The project associated with the team.</description>
    <inlineHelpText>The project associated with the team.</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>