unpackaged/main/default/objects/pse__Team__c/fields/pse__Schedule_Send_Email_To_Others__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule_Send_Email_To_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the schedule is sent to email addresses specified in the Other Email Addresses field when you click the Send Schedule button.</description>
    <inlineHelpText>When true, the schedule is sent to email addresses specified in the Other Email Addresses field when you click the Send Schedule button.</inlineHelpText>
    <label>Send Email to Others (Schedule)</label>
    <type>Checkbox</type>
</CustomField>