unpackaged/main/default/objects/pse__Team__c/fields/pse__Schedule_Use_Custom_Template__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule_Use_Custom_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the schedule email uses the email template defined in the Custom Template Name (Schedule) field.</description>
    <inlineHelpText>When true, the schedule email uses the email template defined in the Custom Template Name (Schedule) field.</inlineHelpText>
    <label>Use Custom Template (Schedule)</label>
    <type>Checkbox</type>
</CustomField>