unpackaged/main/default/objects/pse__Team__c/fields/pse__Swap_Custom_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Swap_Custom_Template_Name__c</fullName>
    <description>Specifies the custom email template to use for sending team schedule swap notifications.</description>
    <inlineHelpText>Specifies the custom email template to use for sending team schedule swap notifications.</inlineHelpText>
    <label>Custom Template Name (Swap)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>