unpackaged/main/default/objects/pse__Team__c/fields/pse__Swap_Other_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>pse__Swap_Other_Email_Addresses__c</fullName>
    <description>Specifies email addresses to receive a notification when a team schedule is swapped. The value is a comma-delimited list of email addresses.</description>
    <inlineHelpText>Specifies email addresses to receive a notification when a team schedule is swapped. The value is a comma-delimited list of email addresses.</inlineHelpText>
    <label>Other Email Addresses (Swap)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>