unpackaged/main/default/objects/pse__Team__c/fields/pse__Swap_Send_Email_To_Others__c.field-meta.xml
<CustomField>
    <fullName>pse__Swap_Send_Email_To_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, a notification is sent to all email addresses defined in the Send Email to Others (Swap) field when a team schedule is swapped.</description>
    <inlineHelpText>When true, a notification is sent to all email addresses defined in the Send Email to Others (Swap) field when a team schedule is swapped.</inlineHelpText>
    <label>Send Email to Others (Swap)</label>
    <type>Checkbox</type>
</CustomField>