unpackaged/main/default/objects/pse__Team__c/validationRules/pse__Validate_Other_Email_Address_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Validate_Other_Email_Address_Fields</fullName>
    <active>true</active>
    <description>Message indicating the field must contain valid email addresses.</description>
    <errorConditionFormula>OR(
				AND(
					AND(
						pse__Schedule_Send_Email_To_Others__c, 
						NOT(
							ISBLANK(
								pse__Schedule_Other_Email_Addresses__c
							)
						)
					), 
					NOT(
						REGEX( 
							pse__Schedule_Other_Email_Addresses__c, "([a-zA-Z0-9!#$%&amp;'*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%&amp;'*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?)(?:([ ]*[,]{1}[ ]*([a-zA-Z0-9!#$%&amp;'*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%&amp;'*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?))*)"
						)
					)
				),
				AND(
					AND(
						pse__Swap_Send_Email_To_Others__c,
						NOT(
							ISBLANK(pse__Swap_Other_Email_Addresses__c)
						)
					), 
					NOT(
						REGEX(
							pse__Swap_Other_Email_Addresses__c, "([a-zA-Z0-9!#$%&amp;'*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%&amp;'*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?)(?:([ ]*[,]{1}[ ]*([a-zA-Z0-9!#$%&amp;'*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%&amp;'*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?))*)"
						)
					)
				) 
			)</errorConditionFormula>
    <errorMessage>One or both of the email address fields contains one or more invalid email addresses.</errorMessage>
</ValidationRule>